--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="loader loader__direction--column"><div class="loader__spin"></div></div>
+<div class="loader loader__direction--column"><div class="loader__spin"><img src="common/img/dummy.jpg" data-src="common/img/bg.jpg" width="0" height="0" alt="Background Image for preloading"><img src="common/img/dummy.jpg" data-src="common/img/bg_2.png" width="0" height="0" alt="Background Image for preloading"></div></div>
 
 <header class="l-header">
 	<a href="/" class="logo"><svg class="logo__inner"><use xlink:href="#svg--logo"/></svg></a>
@@ -34,7 +34,7 @@
 
 <div class="hero hero__direction--column">
   <div class="hero__parallax"></div>
-	<div class="hero__inner slideUp">
+	<div class="hero__inner">
 		<h1 class="hero__title u-text-color-white">WEB DEVELOPER<em>&</em>DESIGNER</h1>
     <p class="hero__text u-mt-10 u-text-color-white">I’m Michinobu Nishimoto and based in Vancouver.<em>Have experience of 3 years+ in web development.</em></p>
 	</div>
@@ -48,25 +48,25 @@
       <h2>PORTFOLIO</h2>
 
       <div class="flex flex__a-items flex__wrap">
-        <div class="flex__item flex__gutter u-mb-20 js slideSide">
+        <div class="flex__item flex__gutter u-mb-20 slideSide">
           <a href="emiacworks.html" class="portfolio portfolio--ew">
             <p class="portfolio__inner portfolio--ew"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-emiac.jpg" data-srcset="common/img/thumb-emiac.jpg 640w, common/img/thumb-emiac@2x.jpg 1200w" alt="EMiAC-Works">
             <span><strong>EMiAC-Works</strong><br>Personal Blog | Design / Development</span></p>
           </a>
         </div>
-        <div class="flex__item flex__gutter u-mb-20 js slideSide">
+        <div class="flex__item flex__gutter u-mb-20 slideSide">
           <a href="rita.html" class="portfolio portfolio--rita">
             <p class="portfolio__inner portfolio--rita"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-rita.jpg" data-srcset="common/img/thumb-rita.jpg 640w, common/img/thumb-rita@2x.jpg 1200w" alt="Rita">
             <span><strong>Rita</strong><br>Website | WordPress Development</span></p>
           </a>
         </div>
-        <div class="flex__item flex__gutter u-mb-20 js slideSide">
+        <div class="flex__item flex__gutter u-mb-20 slideSide">
           <a href="osazen.html" class="portfolio portfolio--osazen">
             <p class="portfolio__inner portfolio--osazen"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-osazen.jpg" data-srcset="common/img/thumb-osazen.jpg 640w, common/img/thumb-osazen@2x.jpg 1200w" alt="Osazen">
             <span><strong>Osazen</strong><br>Website | WordPress Development</span></p>
           </a>
         </div>
-        <div class="flex__item flex__gutter u-mb-20 js slideSide">
+        <div class="flex__item flex__gutter u-mb-20 slideSide">
           <a href="highland.html" class="portfolio portfolio--ahl">
             <p class="portfolio__inner portfolio--ahl"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-ahl.jpg" data-srcset="common/img/thumb-ahl.jpg 640w, common/img/thumb-ahl@2x.jpg 1200w" alt="KYOTO AREAHIGHLAND">
             <span><strong>KYOTO AREAHIGHLAND</strong><br>Website | Design / WordPress Development</span></p>
@@ -79,7 +79,7 @@
       <h2 class="u-text-color-white inverse">SKILLS</h2>
 
       <div class="flex flex__wrap">
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>HTML5<span class="skill__text">95%</span></strong></p>
             <div class="skill__progress">
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>CSS3<span class="skill__text">90%</span></strong></p>
             <div class="skill__progress">
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>Javascript/jQuery<span class="skill__text">60%</span></strong></p>
             <div class="skill__progress">
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>PHP<span class="skill__text">80%</span></strong></p>
             <div class="skill__progress">
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>Sass<span class="skill__text">70%</span></strong></p>
             <div class="skill__progress">
@@ -124,7 +124,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>WordPress<span class="skill__text">80%</span></strong></p>
             <div class="skill__progress">
@@ -133,7 +133,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>Apache<span class="skill__text">50%</span></strong></p>
             <div class="skill__progress">
@@ -142,7 +142,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>Photoshop<span class="skill__text">70%</span></strong></p>
             <div class="skill__progress">
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>Illustrator<span class="skill__text">70%</span></strong></p>
             <div class="skill__progress">
@@ -160,7 +160,7 @@
           </div>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30  js slideUp">
+        <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
             <p><strong>After Effects<span class="skill__text">40%</span></strong></p>
             <div class="skill__progress">
@@ -178,7 +178,7 @@
       
       <div class="flex flex__wrap">
     
-      <div class="flex__item--30 flex__gutter--30 u-mb-50 js slideSide">
+      <div class="flex__item--30 flex__gutter--30 u-mb-50 slideSide">
         <h3>WORK EXPERIENCE</h3>
 
         <ul class="list">
@@ -192,7 +192,7 @@
         </ul>
       </div>
 
-      <div class="flex__item--30 flex__gutter--30 u-mb-50 js slideSide">
+      <div class="flex__item--30 flex__gutter--30 u-mb-50 slideSide">
         <h3>EDUCATION</h3>
 
         <ul class="list">
@@ -209,7 +209,7 @@
 
       </div><!-- /.flex -->
 
-      <a href="#" class="button js slideUp">DOWNLOAD CV</a>
+      <a href="#" class="button slideUp">DOWNLOAD CV</a>
     </section>
 
 
@@ -217,11 +217,11 @@
 			<h2>ABOUT</h2>
 
       <div class="flex flex__wrap">
-        <div class="flex__item--30 flex__gutter--30 js slideSide">
+        <div class="flex__item--30 flex__gutter--30 slideSide">
           <p class="about__me u-text-center"><img src="common/img/dummy.jpg" data-src="common/img/hex_profile.png" width="100%" alt="Michinobu Nishimoto" class="about__me--img"></p>
         </div>
 
-        <div class="flex__item--30 flex__gutter--30 js slideSide">
+        <div class="flex__item--30 flex__gutter--30 slideSide">
           <p>I am a Web Developer and Designer with 3+ years of experience in small and large websites development, currently living in Vancouver. I am passionate about good code, security and performance.</p>
           <p>Basically, I keep clean code because the code is kind of design. </p>
           <p>Now,I am looking for a job for web design or development.</p>
@@ -240,12 +240,12 @@
 		</section>
 
 		<section id="contact" class="l-section u-pb-50">
-				<h2 class="js slideUp">SAY HELLO</h2>
+				<h2 class="slideUp">SAY HELLO</h2>
 
-				<p class="u-text-center u-mb-50 js slideUp">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
+				<p class="u-text-center u-mb-50 slideUp">Thank you for visiting, I hope you enjoyed a short scroll trip.<br>
 				Feel free to drop me a line, just say hi and let me know you.</p>
 
-				<a href="mailto:nismit.dev@gmail.com?subject=hello Mitch" class="button js slideUp">SEND MESSAGE</a>
+				<a href="mailto:nismit.dev@gmail.com?subject=hello Mitch" class="button slideUp">SEND MESSAGE</a>
 			</div>
 		</section>
 
@@ -264,10 +264,6 @@
 
 	<p class="u-text-color-white u-text-center u-text-extra-small">Copyright &copy; 2016 Michinobu Nishimoto(NISMIT), All Rights Reserved.</p>
 </footer>
-
-<img src="common/img/dummy.jpg" data-src="common/img/bg.jpg" width="0" height="0" alt="Background Image for preloading">
-
-<img src="common/img/dummy.jpg" data-src="common/img/bg_2.png" width="0" height="0" alt="Background Image for preloading">
 
 <!-- SVG Splite -->
 <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
