--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 <div class="hero hero__direction--column">
   <div class="hero__parallax"></div>
 	<div class="hero__inner">
-		<h1 class="hero__title u-text-color-white">WEB DEVELOPER<em>&</em>DESIGNER</h1>
-    <p class="hero__text u-mt-10 u-text-color-white">I’m Michinobu Nishimoto and based in Vancouver.<em>Have experience of 3 years+ in web development.</em></p>
+    <div class="hero__intro slideUp">
+		  <h1 class="hero__title u-text-color-white">WEB DEVELOPER<em>&</em>DESIGNER</h1>
+      <p class="hero__text u-mt-10 u-text-color-white">I’m Michinobu Nishimoto and based in Vancouver.<em>Have experience of 3 years+ in web development.</em></p>
+    </div>
 	</div>
 
   <div class="hero__anime"><p class="hero__arrow"></p></div>
@@ -45,7 +47,7 @@
 <div class="l-wrapper">
 	<main class="l-main">
     <section id="portfolio" class="l-section">
-      <h2>PORTFOLIO</h2>
+      <h2 class="slideUp">PORTFOLIO</h2>
 
       <div class="flex flex__a-items flex__wrap">
         <div class="flex__item flex__gutter u-mb-20 slideSide">
@@ -76,7 +78,7 @@
     </section>
 
     <section id="skills" class="l-section bg-section">
-      <h2 class="u-text-color-white inverse">SKILLS</h2>
+      <h2 class="u-text-color-white inverse slideUp">SKILLS</h2>
 
       <div class="flex flex__wrap">
         <div class="flex__item--30 flex__gutter--30 slideUp">
@@ -214,7 +216,7 @@
 
 
 		<section id="about" class="l-section gray-section">
-			<h2>ABOUT</h2>
+			<h2 class="slideUp">ABOUT</h2>
 
       <div class="flex flex__wrap">
         <div class="flex__item--30 flex__gutter--30 slideSide">
