--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
 
     <section id="resume" class="l-section">
-      <h2>RESUME</h2>
+      <h2 class="slideUp">RESUME</h2>
       
       <div class="flex flex__wrap">
     
